Added test csv file

--- a/graphs/help.ui
+++ b/graphs/help.ui
@@ -30,7 +30,7 @@
    <property name="text">
     <string>Программа работает с файлами excel.
 Для корректного считывания данных они должны располагаться на первом листе. Первый столбец считается осью X, остальные - значениями по Y. В таблице могут быть заголовки (их присутствие желательно).
-Сохранение по умолчанию производится в файл &quot;result.xls&quot;. На первом листе будут находиться исходные данные, на втором спектры и взаимные спектры.
+Сохранение по умолчанию производится в файл &quot;result.xls&quot;.
 Во вкладке &quot;Файл&quot; расположены функции, связанные с общим управлением программой: открытие файла, сохранение его в папку по-умолчанию, или в отдельную папку, закрытие файла и выход из программы.
 На вкладке &quot;Анализ&quot; предлагаются все функции обработки имеющихся данных.
 Вкладка &quot;Сервис&quot; содержит функции, изменяющие форму подачи данных.
