--- a/graphs/main_win.ui
+++ b/graphs/main_win.ui
@@ -46,7 +46,7 @@
      <x>0</x>
      <y>0</y>
      <width>1040</width>
-     <height>26</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
@@ -102,6 +102,7 @@
    <addaction name="menu_2"/>
    <addaction name="help"/>
   </widget>
+  <widget class="QStatusBar" name="statusBar"/>
   <action name="open">
    <property name="text">
     <string>Открыть</string>
@@ -229,8 +230,6 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources>
-  <include location="graphs.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
