--- a/graphs/help.ui
+++ b/graphs/help.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>630</width>
-    <height>234</height>
+    <height>331</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <x>20</x>
      <y>20</y>
      <width>591</width>
-     <height>201</height>
+     <height>291</height>
     </rect>
    </property>
    <property name="font">
@@ -28,13 +28,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Программа работает с файлами excel.
-Для корректного считывания данных они должны располагаться на первом листе. Первый столбец считается осью X, остальные - значениями по Y. В таблице могут быть заголовки (их присутствие желательно).
-Сохранение по умолчанию производится в файл &quot;result.xls&quot;.
-Во вкладке &quot;Файл&quot; расположены функции, связанные с общим управлением программой: открытие файла, сохранение его в папку по-умолчанию, или в отдельную папку, закрытие файла и выход из программы.
-На вкладке &quot;Анализ&quot; предлагаются все функции обработки имеющихся данных.
-Вкладка &quot;Сервис&quot; содержит функции, изменяющие форму подачи данных.
-Вкладка &quot;Помощь&quot; предлагает открыть это окно, чтобы прочитать описание программы.</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Graphs&lt;/p&gt;&lt;p&gt;Copyright© 2016-2017 DonRumata710 (donrumata710@yandex.com)&lt;/p&gt;&lt;p&gt;Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &amp;quot;Software&amp;quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject tothe following conditions:&lt;/p&gt;&lt;p&gt;The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.&lt;/p&gt;&lt;p&gt;THE SOFTWARE IS PROVIDED &amp;quot;AS IS&amp;quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="textFormat">
     <enum>Qt::AutoText</enum>
